--- a/college_details_spokane300.html
+++ b/college_details_spokane300.html
@@ -12,6 +12,11 @@
 <div x-data="{ openDIII: true }">
 <div x-data="{ openNAIA: true }">
 <div x-data="{ openNJCAA: true }">
+<div x-data="{ openIdaho: true }">
+<div x-data="{ openMontana: true }">
+<div x-data="{ openOregon: true }">
+<div x-data="{ openTennessee: true }">
+<div x-data="{ openWashington: true }">
 <button class="home-button"><a href="index.html">home</a></button>
 <button class="expand-button" @click="openall = !openall" :class="{ 'active': openall }">expand all...</button>
 <button class="menu-button" @click="openDI = !openDI" :class="{ 'active': openDI }">NCAA DI...</button>
@@ -19,7 +24,12 @@
 <button class="menu-button" @click="openDIII = !openDIII" :class="{ 'active': openDIII }">NCAA DIII...</button>
 <button class="menu-button" @click="openNAIA = !openNAIA" :class="{ 'active': openNAIA }">NAIA...</button>
 <button class="menu-button" @click="openNJCAA = !openNJCAA" :class="{ 'active': openNJCAA }">NJCAA...</button>
-<div x-show="openDI">
+<button class="menu-button" @click="openIdaho = !openIdaho" :class="{ 'active': openIdaho }">Idaho...</button>
+<button class="menu-button" @click="openMontana = !openMontana" :class="{ 'active': openMontana }">Montana...</button>
+<button class="menu-button" @click="openOregon = !openOregon" :class="{ 'active': openOregon }">Oregon...</button>
+<button class="menu-button" @click="openTennessee = !openTennessee" :class="{ 'active': openTennessee }">Tennessee...</button>
+<button class="menu-button" @click="openWashington = !openWashington" :class="{ 'active': openWashington }">Washington...</button>
+<div x-show="openDI && openIdaho">
     <ul>
     <div class="school-title-bar">
     <div class="school-title-image">
@@ -183,7 +193,7 @@
 </div>
     </ul>
 </div>
-<div x-show="openNAIA">
+<div x-show="openNAIA && openIdaho">
     <ul>
     <div class="school-title-bar">
     <div class="school-title-image">
@@ -281,7 +291,7 @@
 </div>
     </ul>
 </div>
-<div x-show="openNAIA">
+<div x-show="openNAIA && openIdaho">
     <ul>
     <div class="school-title-bar">
     <div class="school-title-image">
@@ -420,7 +430,7 @@
 </div>
     </ul>
 </div>
-<div x-show="openNJCAA">
+<div x-show="openNJCAA && openIdaho">
     <ul>
     <div class="school-title-bar">
     <div class="school-title-image">
@@ -557,7 +567,7 @@
 </div>
     </ul>
 </div>
-<div x-show="openDII">
+<div x-show="openDII && openIdaho">
     <ul>
     <div class="school-title-bar">
     <div class="school-title-image">
@@ -676,7 +686,7 @@
 </div>
     </ul>
 </div>
-<div x-show="openDI">
+<div x-show="openDI && openIdaho">
     <ul>
     <div class="school-title-bar">
     <div class="school-title-image">
@@ -856,7 +866,7 @@
 </div>
     </ul>
 </div>
-<div x-show="openNAIA">
+<div x-show="openNAIA && openMontana">
     <ul>
     <div class="school-title-bar">
     <div class="school-title-image">
@@ -970,7 +980,7 @@
 </div>
     </ul>
 </div>
-<div x-show="openDI">
+<div x-show="openDI && openMontana">
     <ul>
     <div class="school-title-bar">
     <div class="school-title-image">
@@ -1113,7 +1123,7 @@
 </div>
     </ul>
 </div>
-<div x-show="openNCCAA">
+<div x-show="openNCCAA && openOregon">
     <ul>
     <div class="school-title-bar">
     <div class="school-title-image">
@@ -1199,7 +1209,7 @@
 </div>
     </ul>
 </div>
-<div x-show="openNWAC">
+<div x-show="openNWAC && openOregon">
     <ul>
     <div class="school-title-bar">
     <div class="school-title-image">
@@ -1300,7 +1310,7 @@
 </div>
     </ul>
 </div>
-<div x-show="openNAIA">
+<div x-show="openNAIA && openOregon">
     <ul>
     <div class="school-title-bar">
     <div class="school-title-image">
@@ -1393,7 +1403,7 @@
 </div>
     </ul>
 </div>
-<div x-show="openNWAC">
+<div x-show="openNWAC && openOregon">
     <ul>
     <div class="school-title-bar">
     <div class="school-title-image">
@@ -1539,7 +1549,7 @@
 </div>
     </ul>
 </div>
-<div x-show="openNAIA">
+<div x-show="openNAIA && openOregon">
     <ul>
     <div class="school-title-bar">
     <div class="school-title-image">
@@ -1622,7 +1632,7 @@
 </div>
     </ul>
 </div>
-<div x-show="openDI">
+<div x-show="openDI && openOregon">
     <ul>
     <div class="school-title-bar">
     <div class="school-title-image">
@@ -1763,7 +1773,7 @@
 </div>
     </ul>
 </div>
-<div x-show="openDI">
+<div x-show="openDI && openOregon">
     <ul>
     <div class="school-title-bar">
     <div class="school-title-image">
@@ -1867,7 +1877,7 @@
 </div>
     </ul>
 </div>
-<div x-show="openNAIA">
+<div x-show="openNAIA && openOregon">
     <ul>
     <div class="school-title-bar">
     <div class="school-title-image">
@@ -1965,7 +1975,7 @@
 </div>
     </ul>
 </div>
-<div x-show="openDIII">
+<div x-show="openDIII && openOregon">
     <ul>
     <div class="school-title-bar">
     <div class="school-title-image">
@@ -2076,7 +2086,7 @@
 </div>
     </ul>
 </div>
-<div x-show="openNJCAA">
+<div x-show="openNJCAA && openTennessee">
     <ul>
     <div class="school-title-bar">
     <div class="school-title-image">
@@ -2163,7 +2173,7 @@
 </div>
     </ul>
 </div>
-<div x-show="openClub">
+<div x-show="openClub && openWashington">
     <ul>
     <div class="school-title-bar">
     <div class="school-title-image">
@@ -2261,7 +2271,7 @@
 </div>
     </ul>
 </div>
-<div x-show="openDII">
+<div x-show="openDII && openWashington">
     <ul>
     <div class="school-title-bar">
     <div class="school-title-image">
@@ -2470,7 +2480,7 @@
 </div>
     </ul>
 </div>
-<div x-show="openNWAC">
+<div x-show="openNWAC && openWashington">
     <ul>
     <div class="school-title-bar">
     <div class="school-title-image">
@@ -2558,7 +2568,7 @@
 </div>
     </ul>
 </div>
-<div x-show="openDI">
+<div x-show="openDI && openWashington">
     <ul>
     <div class="school-title-bar">
     <div class="school-title-image">
@@ -2700,7 +2710,7 @@
 </div>
     </ul>
 </div>
-<div x-show="openNJCAA">
+<div x-show="openNJCAA && openWashington">
     <ul>
     <div class="school-title-bar">
     <div class="school-title-image">
@@ -2811,7 +2821,7 @@
 </div>
     </ul>
 </div>
-<div x-show="openNAIA">
+<div x-show="openNAIA && openWashington">
     <ul>
     <div class="school-title-bar">
     <div class="school-title-image">
@@ -2881,7 +2891,7 @@
 </div>
     </ul>
 </div>
-<div x-show="openDI">
+<div x-show="openDI && openWashington">
     <ul>
     <div class="school-title-bar">
     <div class="school-title-image">
@@ -2994,7 +3004,7 @@
 </div>
     </ul>
 </div>
-<div x-show="openNWAC">
+<div x-show="openNWAC && openWashington">
     <ul>
     <div class="school-title-bar">
     <div class="school-title-image">
@@ -3105,7 +3115,7 @@
 </div>
     </ul>
 </div>
-<div x-show="openNJCAA">
+<div x-show="openNJCAA && openWashington">
     <ul>
     <div class="school-title-bar">
     <div class="school-title-image">
@@ -3203,7 +3213,7 @@
 </div>
     </ul>
 </div>
-<div x-show="openNWAC">
+<div x-show="openNWAC && openWashington">
     <ul>
     <div class="school-title-bar">
     <div class="school-title-image">
@@ -3295,7 +3305,7 @@
 </div>
     </ul>
 </div>
-<div x-show="openNAIA">
+<div x-show="openNAIA && openWashington">
     <ul>
     <div class="school-title-bar">
     <div class="school-title-image">
@@ -3392,7 +3402,7 @@
 </div>
     </ul>
 </div>
-<div x-show="openNWAC">
+<div x-show="openNWAC && openWashington">
     <ul>
     <div class="school-title-bar">
     <div class="school-title-image">
@@ -3485,7 +3495,7 @@
 </div>
     </ul>
 </div>
-<div x-show="openDIII">
+<div x-show="openDIII && openWashington">
     <ul>
     <div class="school-title-bar">
     <div class="school-title-image">
@@ -3599,7 +3609,7 @@
 </div>
     </ul>
 </div>
-<div x-show="openNJCAA">
+<div x-show="openNJCAA && openWashington">
     <ul>
     <div class="school-title-bar">
     <div class="school-title-image">
@@ -3681,7 +3691,7 @@
 </div>
     </ul>
 </div>
-<div x-show="openDII">
+<div x-show="openDII && openWashington">
     <ul>
     <div class="school-title-bar">
     <div class="school-title-image">
@@ -3773,7 +3783,7 @@
 </div>
     </ul>
 </div>
-<div x-show="openDII">
+<div x-show="openDII && openWashington">
     <ul>
     <div class="school-title-bar">
     <div class="school-title-image">
@@ -3896,7 +3906,7 @@
 </div>
     </ul>
 </div>
-<div x-show="openDI">
+<div x-show="openDI && openWashington">
     <ul>
     <div class="school-title-bar">
     <div class="school-title-image">
@@ -4031,7 +4041,7 @@
 </div>
     </ul>
 </div>
-<div x-show="openNWAC">
+<div x-show="openNWAC && openWashington">
     <ul>
     <div class="school-title-bar">
     <div class="school-title-image">
@@ -4131,7 +4141,7 @@
 </div>
     </ul>
 </div>
-<div x-show="openNJCAA">
+<div x-show="openNJCAA && openWashington">
     <ul>
     <div class="school-title-bar">
     <div class="school-title-image">
@@ -4229,7 +4239,7 @@
 </div>
     </ul>
 </div>
-<div x-show="openNWAC">
+<div x-show="openNWAC && openWashington">
     <ul>
     <div class="school-title-bar">
     <div class="school-title-image">
@@ -4353,7 +4363,7 @@
 </div>
     </ul>
 </div>
-<div x-show="openNJCAA">
+<div x-show="openNJCAA && openWashington">
     <ul>
     <div class="school-title-bar">
     <div class="school-title-image">
@@ -4449,7 +4459,7 @@
 </div>
     </ul>
 </div>
-<div x-show="openNJCAA">
+<div x-show="openNJCAA && openWashington">
     <ul>
     <div class="school-title-bar">
     <div class="school-title-image">
@@ -4540,7 +4550,7 @@
 </div>
     </ul>
 </div>
-<div x-show="openDI">
+<div x-show="openDI && openWashington">
     <ul>
     <div class="school-title-bar">
     <div class="school-title-image">
@@ -4799,7 +4809,7 @@
 </div>
     </ul>
 </div>
-<div x-show="openNWAC">
+<div x-show="openNWAC && openWashington">
     <ul>
     <div class="school-title-bar">
     <div class="school-title-image">
@@ -4908,7 +4918,7 @@
 </div>
     </ul>
 </div>
-<div x-show="openNAIA">
+<div x-show="openNAIA && openWashington">
     <ul>
     <div class="school-title-bar">
     <div class="school-title-image">
@@ -5026,7 +5036,7 @@
 </div>
     </ul>
 </div>
-<div x-show="openDI">
+<div x-show="openDI && openWashington">
     <ul>
     <div class="school-title-bar">
     <div class="school-title-image">
@@ -5200,7 +5210,7 @@
 </div>
     </ul>
 </div>
-<div x-show="openNWAC">
+<div x-show="openNWAC && openWashington">
     <ul>
     <div class="school-title-bar">
     <div class="school-title-image">
@@ -5287,7 +5297,7 @@
 </div>
     </ul>
 </div>
-<div x-show="openDII">
+<div x-show="openDII && openWashington">
     <ul>
     <div class="school-title-bar">
     <div class="school-title-image">
@@ -5453,7 +5463,7 @@
 </div>
     </ul>
 </div>
-<div x-show="openNWAC">
+<div x-show="openNWAC && openWashington">
     <ul>
     <div class="school-title-bar">
     <div class="school-title-image">
@@ -5539,7 +5549,7 @@
 </div>
     </ul>
 </div>
-<div x-show="openDIII">
+<div x-show="openDIII && openWashington">
     <ul>
     <div class="school-title-bar">
     <div class="school-title-image">
@@ -5653,7 +5663,7 @@
 </div>
     </ul>
 </div>
-<div x-show="openDIII">
+<div x-show="openDIII && openWashington">
     <ul>
     <div class="school-title-bar">
     <div class="school-title-image">
@@ -5778,7 +5788,7 @@
 </div>
     </ul>
 </div>
-<div x-show="openNWAC">
+<div x-show="openNWAC && openWashington">
     <ul>
     <div class="school-title-bar">
     <div class="school-title-image">
@@ -5878,12 +5888,17 @@
 <li x-show="open | openall">&nbsp;&nbsp;&nbsp;&nbsp;Heating, Air Conditioning, Ventilation and Refrigeration Maintenance Technology/</li>
 <li x-show="open | openall">&nbsp;&nbsp;&nbsp;&nbsp;Automobile/Automotive Mechanics Technology/Technician</li>
 </div>
-</div>
-</div>
-</div>
-</div>
-</div>
-</div>
+</div> <!-- openIdaho -->
+</div> <!-- openMontana -->
+</div> <!-- openOregon -->
+</div> <!-- openTennessee -->
+</div> <!-- openWashington -->
+</div> <!-- openNJCAA -->
+</div> <!-- openNAIA -->
+</div> <!-- openDIII -->
+</div> <!-- openDII -->
+</div> <!-- openDI -->
+</div> <!-- openall -->
     </ul>
     <br><br><br><br><br><br><br><br>
   </body>
