--- a/index.html
+++ b/index.html
@@ -7,6 +7,8 @@
 <li><a href="college_details_16.html">details 16</a> - player 16 list</li>
 <!-- <li><a href="college_details_kip.html">details k1</a> - k, list 1</li> -->
 <li><a href="college_details_spokane300.html">details spokane 300</a> - 300 mile radius of spokane</li>
+<li><a href="college_details_spokaneStates.html">details spokane States</a> - States near spokane</li>
+<li><a href="college_details_spokaneCoaches.html">details spokane Coaches</a> - Coaches attending spokane</li>
 <li><a href="college_details_chicago300.html">details chicago 300</a> - 300 mile radius of chicago</li>
 <li><a href="college_details_chicago100.html">details chicago 100</a> - 100 mile radius of chicago</li>
 <li><a href="college_details_reno300.html">details reno 300</a> - 300 mile radius of reno</li>
