--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
 <li><a href="college_details_chicago300.html">details chicago 300</a> - 300 mile radius of chicago</li>
 <li><a href="college_details_chicago100.html">details chicago 100</a> - 100 mile radius of chicago</li>
 <li><a href="college_details_reno300.html">details reno 300</a> - 300 mile radius of reno</li>
+<li><a href="college_details_florida.html">details florida</a> - State of Florida</li>
     </ul>
   </body>
 </html>
