add date/count info

--- a/college_details_reno300.html
+++ b/college_details_reno300.html
@@ -5,6 +5,8 @@
   </head>
   <body>
   <h2>reno300</h2>
+  <div class="run-count">(school count: 94)</div>
+  <div class="run-date">(2023-03-05 4:1 pm)</div>
     <ul>
 <div x-data="{ openall: false }">
 <div x-data="{ openDI: true }">
